// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarDropdown Render correctly the toolbar dropdown 1`] = `
<div>
  <span
    class="kiali_f1jcl1sl"
    id="graph_filter_interval_duration-name"
  >
    graph_filter_interval_duration
  </span>
  <button
    aria-expanded="false"
    aria-label="1m"
    class="pf-v6-c-menu-toggle"
    data-ouia-component-id="OUIA-Generated-MenuToggle-1"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    id="graph_filter_interval_duration-toggle"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      1m
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`ToolbarDropdown Render correctly the toolbar dropdown 2`] = `
<div>
  <span
    class="kiali_f1jcl1sl"
    id="metrics_filter_poll_interval-name"
  >
    metrics_filter_poll_interval
  </span>
  <button
    aria-expanded="false"
    aria-label="Every 1m"
    class="pf-v6-c-menu-toggle"
    data-ouia-component-id="OUIA-Generated-MenuToggle-2"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    id="metrics_filter_poll_interval-toggle"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      Every 1m
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`ToolbarDropdown Render correctly the toolbar dropdown 3`] = `
<div>
  <span
    class="kiali_f1jcl1sl"
    id="graph_filter_layouts-name"
  >
    graph_filter_layouts
  </span>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle"
    data-ouia-component-id="OUIA-Generated-MenuToggle-3"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    id="graph_filter_layouts-toggle"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;
